[package]
name = "pixel2ascii"
version = "0.1.1"
edition = "2024"
authors = ["Sameer sameervers3@gmail.com"]
description = "Convert images into ASCII art with color and grayscale support, including block-based sampling, ANSI color output, and CLI."
license = "MIT"
repository = "https://github.com/SameerVers3/pixel2ascii"
readme = "README.md"
keywords = ["ascii", "image", "terminal", "cli", "art"]
categories = ["command-line-utilities", "graphics"]
homepage = "https://github.com/SameerVers3/pixel2ascii"
documentation = "https://docs.rs/pixel2ascii"
publish = true
exclude = ["target/*", "*.rs.bk", "*.swp", ".vscode/", ".idea/"]

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
font8x8 = "0.3.1"
image = "0.25.9"
rayon = "1.10"
rusttype = "0.9.3"
